--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link href="./index.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./index.css">
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
